[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/okx/xlayer-reth.git"
repository = "https://github.com/okx/xlayer-reth.git"

# ==============================================================================
# Workspace Configuration
# ==============================================================================

[workspace]
resolver = "2"
members = [
    "crates/builder",
    "crates/chainspec",
    "crates/flashblocks",
    "crates/legacy-rpc",
    "crates/monitor",
    "crates/rpc",
    "crates/tests",
    "crates/version",

    "bin/tools",
    "bin/node",
]
default-members = ["bin/node"]

[workspace.lints]

# ==============================================================================
# Build Profiles
# ==============================================================================

# Mimics reth release profile
[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

# ==============================================================================
# Workspace Dependencies
# ==============================================================================

[workspace.dependencies]

# ==============================================================================
# Internal Dependencies
# ==============================================================================

xlayer-builder = { path = "crates/builder" }
xlayer-chainspec = { path = "crates/chainspec" }
xlayer-flashblocks = { path = "crates/flashblocks" }
xlayer-legacy-rpc = { path = "crates/legacy-rpc" }
xlayer-monitor = { path = "crates/monitor" }
xlayer-reth-node = { path = "bin/node" }
xlayer-rpc = { path = "crates/rpc" }
xlayer-version = { path = "crates/version" }

# For X Layer
xlayer-trace-monitor = { git = "https://github.com/okx/xlayer-toolkit", rev = "d6af8edac7cf179241af1688f7741e260ba48b79" }

# ==============================================================================
# Reth Dependencies (points to our fork)
# ==============================================================================
reth = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-basic-payload-builder = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-chainspec = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-cli = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-cli-commands = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-cli-util = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-db = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-db-api = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-engine-primitives = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-ethereum-forks = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-evm = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-execution-types = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-ipc = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-metrics = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-node-api = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-node-builder = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-node-core = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-node-types = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-optimism-chainspec = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-optimism-cli = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-optimism-consensus = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-optimism-evm = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-optimism-forks = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-optimism-node = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-optimism-payload-builder = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-optimism-primitives = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-optimism-rpc = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-optimism-txpool = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-payload-builder = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-payload-builder-primitives = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-payload-primitives = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-payload-util = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-primitives = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-primitives-traits = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-provider = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-revm = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-rpc = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-rpc-api = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-rpc-convert = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-rpc-engine-api = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-rpc-eth-api = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-rpc-eth-types = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-rpc-layer = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-rpc-server-types = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-storage-api = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-tasks = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-testing-utils = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-tokio-util = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-tracing = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-transaction-pool = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-optimism-flashblocks = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }
reth-trie = { git = "https://github.com/okx/reth", rev = "def73764cd3f0cd13642ae832f182720901b5d8b" }

# ==============================================================================
# Revm Dependencies (follows upstream reth)
# ==============================================================================
revm = { version = "34.0.0", features = [
    "std",
    "secp256k1",
    "optional_balance_check",
], default-features = false }
op-revm = { version = "15.0.0", default-features = false }

# ==============================================================================
# Alloy Dependencies
# ==============================================================================
alloy-chains = { version = "0.2.20", default-features = false }
alloy-contract = { version = "1.4.3" }
alloy-consensus = { version = "1.4.3" }
alloy-eips = { version = "1.4.3", default-features = false }
alloy-evm = { version = "0.26.3", default-features = false }
alloy-genesis = { version = "1.4.3", default-features = false }
alloy-json-rpc = { version = "1.4.3" }
alloy-network = { version = "1.4.3", default-features = false }
alloy-primitives = { version = "1.5.2", default-features = false, features = [
    "map-foldhash",
] }
alloy-provider = { version = "1.4.3" }
alloy-rlp = { version = "0.3.10", default-features = false, features = [
    "core-net",
] }
alloy-rpc-types-engine = { version = "1.4.3", default-features = false }
alloy-rpc-types-eth = { version = "1.4.3" }
alloy-signer-local = { version = "1.4.3", default-features = false }
alloy-sol-types = { version = "1.5.0", default-features = false }

# op-alloy
alloy-op-evm = { version = "0.26.3", default-features = false }
op-alloy-consensus = { version = "0.23.1", default-features = false }
op-alloy-flz = { version = "0.13.1", default-features = false }
op-alloy-network = { version = "0.23.1", default-features = false }
op-alloy-rpc-types = { version = "0.23.1", default-features = false }
op-alloy-rpc-types-engine = { version = "0.23.1", default-features = false }

# ==============================================================================
# Support Dependencies
# ==============================================================================
tokio = { version = "1.44.2", features = ["full"] }
tokio-metrics = { version = "0.4.7" }
tokio-stream = "0.1.11"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio-util = { version = "0.7.4", features = ["codec"] }

# async
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
async-trait = "0.1.89"

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-types = "0.26.0"
jsonrpsee-core = { version = "0.26.0" }

# misc
clap = { version = "4.4.3" }
derive_more = { version = "2", default-features = false, features = ["full"] }
dashmap = "6.1"
either = { version = "1.15.0", default-features = false }
eyre = { version = "0.6.12" }
hex = "0.4"
metrics = "0.24.1"
moka = { version = "0.12.11", features = ["sync"] }
once_cell = "1.19"
parking_lot = { version = "0.12.3" }
secp256k1 = { version = "0.30" }
serde = "1"
serde_json = "1.0"
thiserror = { version = "1.0.64" }
humantime = "2.1"
tracing = { version = "0.1.41" }
shellexpand = "3.1"
url = "2.5"

# p2p
libp2p = { version = "0.56", features = [
    "identify",
    "ping",
    "noise",
    "tcp",
    "autonat",
    "mdns",
    "tokio",
    "cbor",
    "macros",
    "yamux",
    "dns",
] }
libp2p-stream = "0.4.0-alpha"
multiaddr = "0.18"

# ===== Gasless backport: redirect deps to local forks (relative paths) =====
[patch.crates-io]
# Whole revm stack must move together (forked op-revm path-depends on sibling revm crates).
op-revm = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }
revm = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }
revm-bytecode = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }
revm-context = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }
revm-context-interface = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }
revm-database = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }
revm-database-interface = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }
revm-handler = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }
revm-inspector = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }
revm-interpreter = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }
revm-precompile = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }
revm-primitives = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }
revm-state = { git = "https://github.com/okx/revm", rev = "544a2ad5de83ae0dd9e2ae6ceea095017f34ce13" }

alloy-evm = { git = "https://github.com/okx/evm", rev = "e5d8790a9c86260772ba8a6983bcdcf73e9e2592" }
alloy-op-evm = { git = "https://github.com/okx/evm", rev = "e5d8790a9c86260772ba8a6983bcdcf73e9e2592" }
