[package]
name = "xlayer-blacklist"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

# XLayer chain-level blacklist interception. Single crate, two layers:
# `rules` (pure decision logic) + `runtime` (node/revm/reth adapters).
[dependencies]
# cross-client core (rules)
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

# node / revm / reth adapters (runtime)
alloy-evm.workspace = true
alloy-op-evm.workspace = true
alloy-rpc-types-eth.workspace = true
op-alloy-rpc-types.workspace = true
op-revm.workspace = true
reth-evm.workspace = true
reth-node-builder.workspace = true
reth-node-api.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-primitives.workspace = true
revm.workspace = true
arc-swap.workspace = true
eyre.workspace = true

# support
reth-metrics.workspace = true
metrics.workspace = true
thiserror.workspace = true
tracing.workspace = true
