[package]
name = "xlayer-eip8130-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "XLayer EIP-8130 Native Account Abstraction - consensus types and logic"

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-sol-types = { workspace = true }

# evm (feature-gated)
revm = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

# native-verifier (feature-gated)
k256 = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

# misc
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
alloy-primitives = { workspace = true }

[features]
default = []
serde = ["dep:serde", "alloy-primitives/serde"]
evm = ["dep:revm", "dep:thiserror"]
native-verifier = ["dep:k256", "dep:p256", "dep:sha2", "dep:thiserror"]
