[package]
name = "xlayer-eip8130-pool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "XLayer EIP-8130 Native Account Abstraction - transaction pool"

[lints]
workspace = true

[dependencies]
# internal
xlayer-eip8130-consensus = { workspace = true, features = ["evm", "native-verifier"] }

# reth
reth-transaction-pool = { workspace = true }

# alloy
alloy-primitives = { workspace = true }

# misc
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
