[package]
name = "xlayer-innertx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
std = []

[dependencies]
reth-revm.workspace = true
reth-db = { workspace = true, features = ["mdbx"] }
revm-context-interface.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
serde.workspace = true

[lints]
workspace = true
