[package]
name = "xlayer-innertx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
# reth
reth-chain-state.workspace = true
reth-db = { workspace = true, features = ["mdbx"] }
reth-db-api.workspace = true
reth-evm.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-provider.workspace = true
reth-primitives-traits.workspace = true
reth-revm.workspace = true
reth-storage-api.workspace = true

# revm
revm-context-interface.workspace = true
revm-database.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# misc
eyre.workspace = true
futures.workspace = true
once_cell.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
