[package]
name = "xlayer-bridge-intercept"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
thiserror.workspace = true
tracing.workspace = true
