[package]
name = "xlayer-legacy-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
jsonrpsee = { workspace = true, features = ["server", "client"] }
reqwest.workspace = true
tower.workspace = true
serde_json = { workspace = true, features = ["std"] }
tracing.workspace = true
jsonrpsee-types.workspace = true

[lints]
workspace = true
