[package]
name = "xlayer-node-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Library for xlayer-reth-node components"

[dependencies]
reth.workspace = true
reth-db.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-node.workspace = true
reth-optimism-payload-builder.workspace = true
reth-payload-builder.workspace = true
reth-provider.workspace = true

# Flashblocks
op-rbuilder.workspace = true

# misc
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
humantime.workspace = true
url.workspace = true
tracing.workspace = true

[lints]
workspace = true
