[package]
name = "xlayer-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
xlayer-builder.workspace = true
# `serde` + `reth-codec` + `serde-bincode-compat`: every workspace
# feature xlayer-consensus needs to satisfy the node-side trait
# bars (FullSignedTx etc.) through the RPC surface's provider /
# pool types. The three features must travel together — see the
# feature-gate doc blocks in `crates/xlayer-consensus/src/envelope.rs`.
xlayer-consensus = { workspace = true, features = ["serde", "reth-codec", "serde-bincode-compat"] }
xlayer-flashblocks.workspace = true
# `std` + `rpc` features: `rpc` pulls in `op-alloy-rpc-types` which
# we need for both the nonce-slot helper re-use and the forthcoming
# receipt converter wiring.
xlayer-revm = { workspace = true, features = ["std", "rpc"] }
xlayer-rpc-types.workspace = true

# reth
reth-chain-state.workspace = true
reth-optimism-rpc.workspace = true
reth-optimism-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-revm.workspace = true
reth-rpc.workspace = true
reth-rpc-convert.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-rpc-server-types.workspace = true
reth-storage-api.workspace = true
reth-transaction-pool.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true

# op
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true

# rpc
async-trait.workspace = true
jsonrpsee.workspace = true
jsonrpsee-types.workspace = true

# misc
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
# alloy-sol-types — used only in the nonce-slot pinning test in
# `src/aa/mod.rs`. Kept dev-only so a release build doesn't link it.
alloy-sol-types.workspace = true
# op-alloy-consensus — used only by the receipt-helper tests in
# `src/aa/receipt.rs` to build a stock EIP-1559 envelope for the
# non-AA routing assertion. Kept dev-only.
op-alloy-consensus.workspace = true
reth-trie-db.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
