[package]
name = "xlayer-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
xlayer-builder.workspace = true
xlayer-flashblocks.workspace = true

# reth
reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-rpc.workspace = true
reth-optimism-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-revm.workspace = true
reth-rpc.workspace = true
reth-rpc-convert.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-rpc-server-types.workspace = true
reth-storage-api.workspace = true
reth-transaction-pool.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-op-evm.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true

# op
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true
op-revm.workspace = true

# rpc
jsonrpsee.workspace = true
jsonrpsee-types.workspace = true

# misc
async-trait.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-sol-types.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }
reth-trie-db.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
