[package]
name = "xlayer-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "XLayer consensus-layer wire types тАФ XLayerAA (EIP-8130) transaction and supporting RLP types"

[lints]
workspace = true

[dependencies]
# alloy
alloy-consensus = { workspace = true, default-features = false }
alloy-eips = { workspace = true, default-features = false }
# alloy-evm is needed for the wireтЖТexec `FromRecoveredTx` /
# `FromTxWithEncoded` impls in `envelope.rs`. It's the single break
# from the "wire-level only" crate scope, mirroring the existing
# (pre-P2) dep on xlayer-revm for `XLayerAAParts`.
alloy-evm = { workspace = true, default-features = false }
# `k256` feature pulls in ecrecover тАФ needed for the K1 native verifier.
alloy-primitives = { workspace = true, default-features = false, features = ["k256"] }
alloy-rlp = { workspace = true, default-features = false }
# `alloy-serde::quantity` helpers used by the hex-encoded numeric
# serde adapters on `TxEip8130`. Only pulled in when the `serde`
# feature is active.
alloy-serde = { workspace = true, optional = true }

# op-alloy-consensus тАФ supplies `OpTxEnvelope` + the `OpTransaction`
# trait we need to wrap into `Extended<_, Sealed<TxEip8130>>`. Same
# layering argument as alloy-consensus itself: this crate is scoped
# to wire-level concerns, and the envelope IS a wire-level concept.
op-alloy-consensus = { workspace = true, default-features = false }

# op-revm тАФ needed only for `OpSpecId`, the fork discriminator threaded
# through the gas schedule. `default-features = false` keeps this
# `no_std`-compatible.
op-revm = { workspace = true, default-features = false }

# revm тАФ TxEnv type used in the wireтЖТexec conversion bridge.
# `default-features = false` keeps this no_std-clean (same as its
# parent `op-revm` already pulls in transitively).
revm = { workspace = true, default-features = false }

# reth тАФ `InMemorySize` / `SignedTransaction` trait bar we need to
# satisfy so the combined envelope can slot into `NodePrimitives::SignedTx`
# downstream (P2b.2+ milestones). `default-features = false` keeps this
# no_std-clean.
reth-primitives-traits = { workspace = true, default-features = false }

# xlayer
xlayer-revm = { workspace = true }

# misc
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[dev-dependencies]
alloy-rlp = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-evm/std",
    "alloy-primitives/std",
    "alloy-rlp/std",
    "op-alloy-consensus/std",
    "op-revm/std",
    "reth-primitives-traits/std",
    "revm/std",
    "serde?/std",
    "xlayer-revm/std",
]
serde = [
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "dep:alloy-serde",
    "dep:serde",
    "op-alloy-consensus/serde",
]
