[package]
name = "xlayer-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "XLayer consensus-layer wire types — XLayerAA (EIP-8130) transaction and supporting RLP types"

[lints]
workspace = true

[dependencies]
# alloy
alloy-consensus = { workspace = true, default-features = false }
alloy-eips = { workspace = true, default-features = false }
# alloy-evm is needed for the wire→exec `FromRecoveredTx` /
# `FromTxWithEncoded` impls in `envelope.rs`. It's the single break
# from the "wire-level only" crate scope, mirroring the existing
# (pre-P2) dep on xlayer-revm for `XLayerAAParts`.
alloy-evm = { workspace = true, default-features = false }
# `k256` feature pulls in ecrecover — needed for the K1 native verifier.
alloy-primitives = { workspace = true, default-features = false, features = ["k256"] }
alloy-rlp = { workspace = true, default-features = false }
# `alloy-serde::quantity` helpers used by the hex-encoded numeric
# serde adapters on `TxEip8130`. Only pulled in when the `serde`
# feature is active.
alloy-serde = { workspace = true, optional = true }

# op-alloy-consensus — supplies `OpTxEnvelope` + the `OpTransaction`
# trait we need to wrap into `Extended<_, Sealed<TxEip8130>>`. Same
# layering argument as alloy-consensus itself: this crate is scoped
# to wire-level concerns, and the envelope IS a wire-level concept.
op-alloy-consensus = { workspace = true, default-features = false }

# op-revm — needed only for `OpSpecId`, the fork discriminator threaded
# through the gas schedule. `default-features = false` keeps this
# `no_std`-compatible.
op-revm = { workspace = true, default-features = false }

# revm — TxEnv type used in the wire→exec conversion bridge.
# `default-features = false` keeps this no_std-clean (same as its
# parent `op-revm` already pulls in transitively).
revm = { workspace = true, default-features = false }

# reth — `InMemorySize` / `SignedTransaction` trait bar we need to
# satisfy so the combined envelope can slot into `NodePrimitives::SignedTx`
# downstream (P2b.2+ milestones). `default-features = false` keeps this
# no_std-clean.
reth-primitives-traits = { workspace = true, default-features = false }

# reth-codecs — only needed to provide a `Compact` impl for
# `XLayerTxEnvelope`, which `FullSignedTx` requires once the
# primitives-traits `reth-codec` feature is active. Gated behind
# our own `reth-codec` feature so no_std / fault-proof / prover
# builds (which disable reth-codec upstream and satisfy
# `MaybeCompact` through its blanket impl) stay compilable.
reth-codecs = { workspace = true, default-features = false, optional = true }
bytes = { version = "1.6", default-features = false, optional = true }

# xlayer — `default-features = false` is load-bearing: xlayer-revm's
# default set enables `rpc`, which cascades `reth-optimism-evm/rpc` →
# the full reth-node-api tree, which forces `serde` + `reth-codec` +
# every other primitive-traits feature on transitively. Keeping it
# off here lets xlayer-consensus be built standalone with just its
# own `std` / `serde` feature flags actually governing the shape.
xlayer-revm = { workspace = true, default-features = false }

# misc
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[dev-dependencies]
alloy-rlp = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-evm/std",
    "alloy-primitives/std",
    "alloy-rlp/std",
    "bytes?/std",
    "op-alloy-consensus/std",
    "op-revm/std",
    "reth-codecs?/std",
    "reth-primitives-traits/std",
    "revm/std",
    "serde?/std",
    "xlayer-revm/std",
]
serde = [
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "dep:alloy-serde",
    "dep:serde",
    "op-alloy-consensus/serde",
]
# Enables the `Compact` impl on `XLayerTxEnvelope`, required for
# `FullSignedTx` (and therefore `NodePrimitives::SignedTx`) when the
# consumer has `reth-primitives-traits/reth-codec` active. Workspace /
# node builds turn this on via transitive feature unification; no_std /
# prover builds leave it off and rely on the blanket `MaybeCompact` impl.
reth-codec = ["dep:reth-codecs", "dep:bytes"]
# Enables the `RlpBincode` marker impls that promote `XLayerTxEnvelope`
# into `SerdeBincodeCompat` through the existing RLP encode/decode path.
# Required once the consumer turns on
# `reth-primitives-traits/serde-bincode-compat` (driven by
# `reth-chain-state`'s in-memory block cache). Implies `serde` because
# `SerdeBincodeCompat`'s super-trait tower includes serde itself.
serde-bincode-compat = ["reth-primitives-traits/serde-bincode-compat", "serde"]
